@@ -15,7 +15,6 @@ MakeGlobalVar(sources_engine_System_common
 		"${CMAKE_CURRENT_SOURCE_DIR}/GlobalConfig.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Info.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Input/InputHandler.cpp"
-		"${CMAKE_CURRENT_SOURCE_DIR}/Input/Joystick.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Input/KeyInput.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Input/MouseInput.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/LoadSave/CregLoadSaveHandler.cpp"
