@@ -99,7 +99,6 @@
 	SETUP_EVENT(MousePress,     MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
 	SETUP_EVENT(MouseRelease,   MANAGED_BIT | UNSYNCED_BIT)
 	SETUP_EVENT(MouseWheel,     MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
-	SETUP_EVENT(JoystickEvent,  MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
 	SETUP_EVENT(IsAbove,        MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
 	SETUP_EVENT(GetTooltip,     MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
 
